--- a/main.css
+++ b/main.css
@@ -17,6 +17,19 @@
   height: 84px;
   background-color: #555;
   margin: 4px;
+  border: 3px solid #fff;
+  border-radius: 10px;
+  box-sizing: border-box;
+  transform: skewX(-14deg);
+  transition: 
+  transform .1s,
+  background-color .6s;
+}
+
+.container .heroes .hero:hover {
+  transform: skewX(-14deg) scale(1.3);
+  background-color: #ff9c0f;
+  z-index: 1;
 }
 
 .container .heroes .hero .image {}
